# ERPNextNof

./: .env.example  .gitignore  ALGORITHM_EXPLANATION.md  ALLURE_REPORTS_GUIDE.md  API_CONTRACT.md  API_REFERENCE_WITH_EXAMPLES.md  APPLICATION_STATUS.md  ARCHITECTURE_DEEP_DIVE.md  CODE_QUALITY_REPORT.md  COMPLETE_TESTING_DOCUMENTATION.md  DEMO_DATA.md  DEMO_DATA_TESTING.md  DEMO_SUMMARY.py  DEPLOYMENT_RUNBOOK.md  DESIRED_DATE_FEATURE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURE_SHOWCASE.md  FRONTEND_INTEGRATION.md  FRONTEND_INTEGRATION_PROMPT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  INTEGRATION_STATUS.md  INTEGRATION_TESTS.md  NEXT_STEPS.md  PERFORMANCE_ANALYSIS.md  PO_PERMISSION_FIX.md  PRESENTATION_DRAFT.md  PROCESSING_LEAD_TIME.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_ALLURE.md  README.md  Sales Invoice.csv  TERMS_AND_CONDITIONS.md  TESTS.md  TEST_COMMANDS.md  TEST_PLAN.md  TEST_STRATEGY_MATRIX.md  TEST_SUMMARY.txt  (+32 more)
.github/workflows/: ci.yml  integration.yml
24/: index.html
24/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
24/export/: influxDbData.txt  prometheusData.txt
24/history/: history.json  retry-trend.json
24/widgets/: environment.json  executors.json  (+4 more)
26/: index.html
27/: index.html
28/: index.html
29/: index.html
30/: index.html
31/: index.html
data/: Sales Invoice.csv  Sales Invoice_Enriched.csv  purchase_orders.csv  stock.csv
last-history/: categories-trend.json  duration-trend.json  history-trend.json
src/: config.py  main.py
tests/: TEST_PLAN_INDEX.md  conftest.py
(+2217 files in other folders)
